--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="logo">
-      <img src="/src/assets/img/logo-central.jpeg" alt="WeBear Logo" class="logo-image" />
+      <img src="assets/img/logo-central.jpeg" alt="WeBear Logo" class="logo-image" />
       <h2>WeBear</h2>
     </div>
     <nav class="navigation">
